--- a/assets/src/scss/style.scss
+++ b/assets/src/scss/style.scss
@@ -30,7 +30,8 @@
 /// Base
 /// Very broad area of styling.
 /// ============================================================================
-@import 'base/reset',
+@import 'base/fonts',
+        'base/reset',
         'base/base';
 
 /// ============================================================================
@@ -49,13 +50,45 @@
 /// Objects are designed patterns, from a pattern library or very inique items 
 /// such as buttons, typography etc. Changing these will affect major parts of the site.
 /// ============================================================================
-@import 'objects/site-warnings',
-        'objects/skip-to-content',
-        'objects/site-header',
-        'objects/site-footer';
+@import 'objects/globals/site-warnings',
+        'objects/globals/skip-to-content',
+        'objects/globals/site-header',
+        'objects/globals/site-navigation-mobile',
+        'objects/globals/site-navigation',
+        'objects/globals/site-footer',
+        'objects/typography',
+        'objects/social-list',
+        'objects/modal',
+        'objects/accordion',
+        'objects/card',
+        'objects/button',
+        'objects/tabs',
+        'objects/icons',
+        'objects/sound-collection-teaser',
+        'objects/article-teaser',
+        'objects/pagination',
+        'objects/toggle-arrow';
+
+/// ============================================================================
+/// Components
+/// ============================================================================
+@import 'components/general-content',
+        'components/article',
+        'components/sound-collections',
+        'components/latest-sound-collections',
+        'components/sound-collection',
+        'components/contact-us',
+        'components/blog-teaser-grid',
+        'components/input-control',
+        'components/team-member',
+        'components/hero-banner';
 
 /// ============================================================================
 /// Utilities
 /// Utilities / helpers which are used throughout the site. This is very specific code bits.
 /// ============================================================================
 @import 'utilities/helpers';
+
+* {
+    color: red !important;
+}
