--- a/assets/src/scss/utilities/_helpers.scss
+++ b/assets/src/scss/utilities/_helpers.scss
@@ -3,6 +3,17 @@
 // ============================================================================
 
 // ============================================================================
+// Background Color
+// ============================================================================
+.u-secondary-background {
+  background-color: #F6F7F8;
+}
+
+.u-primary-background {
+  background-color: #fff;
+}
+
+// ============================================================================
 // Accessability
 // ============================================================================
 .u-sr-only {
