--- a/assets/src/scss/tools/_mixins.scss
+++ b/assets/src/scss/tools/_mixins.scss
@@ -34,6 +34,19 @@
 }
 
 // ============================================================================
+// Button Reset
+// Reset buttons to no styles
+// ============================================================================
+@mixin btn-reset {
+	appearance: none;
+  background: transparent;
+  margin: 0;
+  padding: 0;
+  border: 0;
+  text-decoration: none;
+}
+
+// ============================================================================
 // Unstyled list
 // Removes all basic list styling
 // ============================================================================
@@ -81,7 +94,7 @@
 	width: 1px;
 	height: 1px;
 	overflow: hidden;
-	clip-path: rect(1px, 1px, 1px, 1px);
+	clip: rect(1px, 1px, 1px, 1px);
   white-space: nowrap;
 }
 
@@ -93,7 +106,7 @@
 	height: auto;
 	width: auto;
 	overflow: visible;
-	clip-path: auto;
+	clip: auto;
   white-space: nowrap;
 }
 
